crates/function-metrics/tests/ui/fail/duplicate_labels.stderr
error: duplicate label key `chain_id`
 --> tests/ui/fail/duplicate_labels.rs:3:20
  |
3 | #[function_metrics(labels(chain_id, chain_id))]
  |                    ^^^^^^
